--- a/project.config.json
+++ b/project.config.json
@@ -14,6 +14,8 @@
 	},
 	"appid": "wxcb1630a0cdfa9a2e",
 	"projectname": "magic",
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {
 		"search": {
 			"current": -1,
